<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanes_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joelgeorgekal@gmail.com">joel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>rclcpp</exec_depend>
  </export>
</package>
